[package]
name = "foo"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" 

[dependencies]
bevy = "0.13.1"
bevy-inspector-egui = "0.23.4"
